--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
         
         .p-footer {
             font-size: .6em;
-            margin-top: -4%;
+            margin-top: 2%;
             text-align: left;
+            ;
             margin-left: 1%;
         }
         
@@ -319,6 +320,9 @@
                 </div>
             </form>
             <br>
+            <p class="p-footer" style="margin-top: -3%;">
+                People who use our service may have uploaded your contact information to Facebook. <a href="#">Learn more</a>.
+            </p>
             <p class="p-footer">
                 By clicking Sign Up, you agree to our <a href="#">Terms,</a> <a href="#">Data Policy</a> and <a href="#">Cookie Policy.</a> You may recieve SMS notifications from us and can opt out at any time.
             </p>
