--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             border-color: #ccd0d5;
             border-radius: 5px;
             /* box-sizing: border-box; */
-            outline-color: rgba(0, 0, 255, 0);
+            outline-color: #b4b8be;
         }
         
         input::placeholder {
